--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,19 @@ html{
 }
 
 /* COMMON */
-
+.container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 /* HEADER */
 .header-nav{
     display: flex;
     justify-content: flex-end;
     height: 20px;
-    /* background-color: red; */
     color: white;
     font-size: .8em;
-    margin-top: .3em;
+    /* margin-top: .3em; */
 }
 
 .speaker{
@@ -33,4 +36,26 @@ html{
     padding: .2em .4em;
     border-radius: 5px; 
     margin: 0 .2em;
+}
+
+/* MAIN */
+main{
+    height: calc(100vh - 120px);
+    background-color: aquamarine;
+    overflow-y: auto;
+}
+
+.user{
+    width: 200px;
+    height: 125px;
+    border: 1px solid green;
+    margin: .4em .2em;
+    background-image: url("https://picsum.photos/246/146");
+    background-position: center;
+}
+
+/* FOOTER */
+footer{
+    height: 100px;
+    background-color: #222222;
 }
