--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ html{
     height: 20px;
     color: white;
     font-size: .8em;
+    margin-bottom: 2em;
     /* margin-top: .3em; */
 }
 
@@ -31,7 +32,7 @@ html{
     border-radius: 5px;
 }
 
-.arrow{
+.multi-arrows{
     background-color: rgba(232, 230, 237, .4);
     padding: .2em .4em;
     border-radius: 5px; 
@@ -40,7 +41,7 @@ html{
 
 /* MAIN */
 main{
-    height: calc(100vh - 120px);
+    height: calc(100vh - 130px);
     overflow-y: auto;
 }
 
@@ -66,6 +67,53 @@ main{
 
 /* FOOTER */
 footer{
-    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 80px;
     background-color: #222222;
+}
+/* left footer */
+.left-footer{
+    display: flex;
+    width: 10%;
+    height: 100%;
+    background-color: red;
+}
+
+.microphone{
+    width: 50%;
+    height: 100%;
+    border: 1px solid lightgreen;
+}
+
+.microphone i:first-of-type{
+    font-size: 2em;
+}
+
+.webcam{
+    width: 50%;
+    height: 100%;
+    border: 1px solid lightgreen;
+}
+/* center footer */
+.center-footer{
+    display: flex;
+    width: 50%;
+    height: 100%;
+    background-color: orange;
+}
+
+.footer-item{
+    width: calc(100% / 8);
+    border: 1px solid lightgreen;
+}
+
+/* right footer */
+.right-footer{
+    display: flex;
+    width: 5%;
+    height: 100%;
+    background-color: green;
 }
