--- a/css/style.css
+++ b/css/style.css
@@ -73,29 +73,37 @@ footer{
     width: 100%;
     height: 80px;
     background-color: #222222;
+    color: white;
 }
+
 /* left footer */
 .left-footer{
     display: flex;
+    align-items: center;
     width: 10%;
     height: 100%;
-    background-color: red;
 }
 
 .microphone{
     width: 50%;
-    height: 100%;
-    border: 1px solid lightgreen;
+    text-align: center;
 }
 
-.microphone i:first-of-type{
-    font-size: 2em;
+.left-footer i:first-of-type{
+    font-size: 1.5em;
 }
 
 .webcam{
     width: 50%;
-    height: 100%;
-    border: 1px solid lightgreen;
+    text-align: center;
+}
+
+i{
+    margin-bottom: .5em;
+}
+
+p{
+    font-size: .8em;
 }
 /* center footer */
 .center-footer{
